# tp-tsi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/input/: route0.pgm
lib/nrc/: CMakeLists.txt
lib/nrc/examples/: example.c
src/tp1/: CMakeLists.txt  averaging_filter.c  edge_detection_colors.c  edge_detection_grayscale.c
src/tp2/: CMakeLists.txt  binarization.c  labelization_advanced.c  labelization_advanced_interest_region_detection.c  labelization_intuitive.c  labelization_intuitive_interest_region_detection.c
src/tp3/: CMakeLists.txt  hough_transform.c  line_detection.c
