add_executable(binarization binarization.c)
target_link_libraries(binarization PRIVATE nrc)

add_executable(labelization_intuitive labelization_intuitive.c)
target_link_libraries(labelization_intuitive PRIVATE nrc)

add_executable(labelization_intuitive_interest_region_detection labelization_intuitive_interest_region_detection.c)
target_link_libraries(labelization_intuitive_interest_region_detection PRIVATE nrc)

add_executable(labelization_advanced labelization_advanced.c)
target_link_libraries(labelization_advanced PRIVATE nrc)

add_executable(labelization_advanced_interest_region_detection labelization_advanced_interest_region_detection.c)
target_link_libraries(labelization_advanced_interest_region_detection PRIVATE nrc)